--- a/Assets/UnitTest Assistant/Testing Assistant.asmdef
+++ b/Assets/UnitTest Assistant/Testing Assistant.asmdef
@@ -2,7 +2,8 @@
     "name": "Testing Assistant",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
