--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/Assets/Test.meta
+/Assets/Test/Recorder.asset.meta
+/Assets/Test/Recorder.asset
+/Assets/Test
