--- a/Assets/QuadTree/QuadTree.asmdef
+++ b/Assets/QuadTree/QuadTree.asmdef
@@ -1,3 +1,13 @@
-﻿{
-	"name": "QuadTree"
+{
+    "name": "QuadTree",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
