Added demo scene from other project

--- a/Assets/FP Contoller/FP Controller.asmdef
+++ b/Assets/FP Contoller/FP Controller.asmdef
@@ -2,7 +2,8 @@
     "name": "FPController",
     "references": [
         "GUID:4fb890a4449a2404c981a688e3909642",
-        "GUID:463769a6fcc376444b277b5c02e39ab1"
+        "GUID:463769a6fcc376444b277b5c02e39ab1",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
